Fixed filters collapse animation on desktop

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -9041,6 +9041,7 @@ a:active .caret-triangle .caret-path,
 @media screen and (min-width: 768px) {
   #sidemenu .facets-toggle + #facets-collapse {
     display: block;
+    height: auto !important;
   }
 }
 .facets-title {
