--- a/docroot/themes/iucn_who/less/theme/blocks.less
+++ b/docroot/themes/iucn_who/less/theme/blocks.less
@@ -19,6 +19,7 @@
     }
     @media @grid-desktop {
       display: block;
+      height: auto !important;
     }
   }
 }
